alignment issue on music.html

--- a/project3/style.css
+++ b/project3/style.css
@@ -16,8 +16,7 @@ body {
   max-width: 1100px;
   margin: 0 auto;
   padding-right: 120px;
-  padding-left: 120px;
-  padding-top: 80px;
+  padding: 20px;
   padding-bottom: 80px;
   background-color: #f5f5f5;
 }
